added fa-right css style to float fa to the right

--- a/didi.css
+++ b/didi.css
@@ -228,6 +228,10 @@
 .xxxlarge-font,.font-xxxlarge{font-size:48px}
 .jumbo-font,.font-jumbo{font-size:64px}
 
+
+/* font-awesome integration */
+.fa-right::before { float: right}
+
 /* hover */
 .hover-shadow:hover{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
 .hover-bold:hover{ font-weight:bold}
