improved integration with font-awesome

--- a/didi.css
+++ b/didi.css
@@ -231,7 +231,8 @@
 
 
 /* font-awesome integration */
-.fa-right::before { float: right}
+.fa::before{font:normal normal normal 14px/1 FontAwesome;}
+.fa-right::before {float:right}
 
 /* hover */
 .hover-shadow:hover{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
