--- a/didi.css
+++ b/didi.css
@@ -317,28 +317,38 @@
 .height-64,.height-jumbo{height:64px}
 
 /* spacing - padding */
-.pad-1,.pad-min,.pad-x-1{padding-left:1; padding-right:1}
-.pad-1,.pad-min,.pad-y-1{padding-top:1; padding-bottom:1}
-.pad-2,.pad-tiny,.pad-x-2{padding-left:2; padding-right:2}
-.pad-2,.pad-tiny,.pad-y-2{padding-top:2; padding-bottom:2}
-.pad-4,.pad-small,.pad-x-4{padding-left:4; padding-right:4}
-.pad-4,.pad-small,.pad-y-4{padding-top:4; padding-bottom:4}
-.pad-8,.pad,.pad-medium,.pad-x,.pad-x-8{padding-left:8; padding-right:8}
-.pad-8,.pad,.pad-medium,.pad-y,.pad-y-8{padding-top:8; padding-bottom:8}
-.pad-12,.pad-large,.pad-x-12{padding-left:12; padding-right:12}
-.pad-12,.pad-large,.pad-y-12{padding-top:12; padding-bottom:12}
-.pad-16,.pad-xlarge,.pad-x-16{padding-left:16; padding-right:16}
-.pad-16,.pad-xlarge,.pad-y-16{padding-top:16; padding-bottom:16}
-.pad-32,.pad-xxlarge,.pad-x-32{padding-left:32; padding-right:32}
-.pad-32,.pad-xxlarge,.pad-y-32{padding-top:32; padding-bottom:32}
-.pad-48,.pad-xxxlarge{padding:48}
-.pad-64,.pad-jumbo{padding:64}
-.pad-128{padding:128}
-.pad-bottom{padding-bottom:8px}
-.pad-left{padding-left:16px}
-.pad-right{padding-right:16px}
-.pad-top{padding-top:8px}
+/* horizontal padding */
+.pad-min.pad-x,.pad-min.pad-left{padding-left:0.5%}
+.pad-min.pad-x,.pad-min.pad-right{padding-right:0.5%}
+.pad-tiny.pad-x,.pad-tiny.pad-left{padding-left:1%}
+.pad-small.pad-x,.pad-small.pad-left{padding-left:1.5%}
+.pad-small.pad-x,.pad-small.pad-right{padding-right:1.5%}
+.pad.pad-x,.pad-x.pad-left{padding-left:2%}
+.pad-large.pad-x,.pad-large.pad-left{padding-left:4%}
+.pad-large.pad-x,.pad-large.pad-right{padding-right:4%}
+.pad-xlarge.pad-x,.pad-xlarge.pad-left{padding-left:8%}
+.pad-xlarge.pad-x,.pad-xlarge.pad-right{padding-right:8%}
+.pad-jumbo.pad-x,.pad-jumbo.pad-left{padding-left:16%}
+.pad-jumbo.pad-x,.pad-jumbo.pad-left{padding-right:16%}
+
+/* vertical padding */
+.pad-min.pad-y,.pad-min.pad-top{padding-top:0.5%}
+.pad-min.pad-y,.pad-min.pad-bottom{padding-bottom:0.5%}
+.pad-tiny.pad-y,.pad-tiny.pad-top{padding-top:1%}
+.pad-small.pad-y,.pad-small.pad-top{padding-top:1.5%}
+.pad-small.pad-y,.pad-small.pad-bottom{padding-bottom:1.5%}
+.pad.pad-y,.pad.pad-top{padding-top:2%}
+.pad.pad-y,.pad.pad-bottom{padding-bottom:2%}
+.pad-large.pad-y,.pad-large.pad-top{padding-top:4%}
+.pad-large.pad-y,.pad-large.pad-bottom{padding-bottom:4%}
+.pad-xlarge.pad-y,.pad-xlarge.pad-top{padding-top:8%}
+.pad-xlarge.pad-y,.pad-xlarge.pad-bottom{padding-bottom:8%}
+.pad-jumbo.pad-y,.pad-jumbo.pad-top{padding-top:16%}
+.pad-jumbo.pad-y,.pad-jumbo.pad-bottom{padding-bottom:16%}
+
+
 .pad-0,.nopad{padding:0}
+
 .justify {
   display: -webkit-flex; /* Safari */
   -webkit-justify-content: space-between; /* Safari 6.1+ */
