--- a/didi.css
+++ b/didi.css
@@ -122,6 +122,7 @@
 .teal,.hover-teal:hover{color:#fff;background-color:#009688}
 .yellow,.hover-yellow:hover{color:#000;background-color:#ffeb3b}
 .white,.hover-white:hover{color:#000;background-color:#fff}
+.whitesmoke,.hover-whitesmoke:hover{color:#f5f5f5;background-color:#fff}
 .black,.hover-black:hover{color:#fff;background-color:#000}
 .grey,.hover-grey:hover{color:#000;background-color:#9e9e9e}
 .light-grey,.hover-light-grey:hover{color:#000;background-color:#f1f1f1}
@@ -152,6 +153,7 @@
 .text-teal,.hover-text-teal:hover{color:#009688}
 .text-yellow,.hover-text-yellow:hover{color:#d2be0e}
 .text-white,.hover-text-white:hover{color:#fff}
+.text-whitesmoke,.hover-text-white:hover{color:#f5f5f5}
 .text-black,.hover-text-black:hover{color:#000}
 .text-grey,.hover-text-grey:hover{color:#757575}
 .text-light-grey,.hover-text-light-grey:hover{color:#f1f1f1}
