--- a/didi.css
+++ b/didi.css
@@ -502,6 +502,7 @@
   .grid.s10.space>*{width:8.2%}
   .grid.s10.space>:nth-child(10n+10){margin-right:0}
 
+  .col.s0,.hide-small{display:none}
   .col.s1{width:8.33333%}
   .col.s1.hspace{width:6.33333%}
   .col.s2{width:16.66666%}
@@ -551,6 +552,7 @@
   .grid.m10.space>*{width:8.2%}
   .grid.m10.space>:nth-child(10n+10){margin-right:0}
 
+  .col.m0,.hide-medium{display:none}
   .col.m1{width:8.33333%}
   .col.m2.hspace{width:6.99999%}
   .col.m2{width:16.66666%}
@@ -569,8 +571,6 @@
   .col.m10{width:83.33333%}
   .col.m11{width:91.66666%}
   .col.m12{width:99.99999%}
-  .hide-medium{display:none}
-  .nav-medium{height:100%}
 
   .col.widest{width:100%}
 
@@ -609,6 +609,7 @@
   .grid.l10.space>*{width:8.2%}
   .grid.l10.space>:nth-child(10n+10){margin-right:0}
 
+  .col.l0,.hide-large{display:none}
   .col.l1{width:8.33333%}
   .col.l2{width:16.66666%}
   .col.l3{width:24.99999%}
@@ -621,10 +622,6 @@
   .col.l10{width:83.33333%}
   .col.l11{width:91.66666%}
   .col.l12{width:99.99999%}
-  .hide-large{display:none}
-  .nav-large{height:100%}
-
-  .col.widest{width:100%}
 }
 
-.widest,.modal-dialog>.modal-body{width:100%}
+.widest,.col.widest{width:100%}
