--- a/didi.css
+++ b/didi.css
@@ -67,10 +67,11 @@
 .border-width-large { border-width: 8px}
 .border-left[class*=border-width-] { border-left-style: solid }
 .border-right[class*=border-width-] { border-right-style: solid }
-.border-bottom[class*=border-width-] { border-bottom-style:solid }
+.border-bottom[class*=border-width-],.hover-border-bottom:hover,.hover-border-bottom:focus[class*=border-width-] { border-bottom-style:solid }
 .border-top[class*=border-width-] { border-top-style:solid }
-.border[class*=border-width-] { border-style:solid }
+.border[class*=border-width-],.hover-border:hover[class*=border-width-] { border-style:solid }
 .borderless,.border-less { border-top-width:0;border-bottom-width:0;border-left-width:0;border-right-width:0}
+.border-collapse{border-collapse: collapse;}
 
 
 /* border divider */
