--- a/didi.css
+++ b/didi.css
@@ -103,7 +103,6 @@
 .closebtn:hover,.closebtn:focus{color:#000;text-decoration:none;cursor:pointer}
 
 /* colors */
-.whitesmoke,.faded{ background-color:whitesmoke}
 .hover-none:hover{box-shadow:none;background-color:transparent}
 .amber,.hover-amber:hover{color:#000;background-color:#ffc107}
 .aqua,.hover-aqua:hover{color:#000;background-color:#00ffff}
@@ -127,7 +126,7 @@
 .teal,.hover-teal:hover{color:#fff;background-color:#009688}
 .yellow,.hover-yellow:hover{color:#000;background-color:#ffeb3b}
 .white,.hover-white:hover{color:#000;background-color:#fff}
-.whitesmoke,.hover-whitesmoke:hover{color:#f5f5f5;background-color:#fff}
+.whitesmoke,.hover-whitesmoke:hover{color:#000;background-color:#f5f5f5}
 .black,.hover-black:hover{color:#fff;background-color:#000}
 .grey,.hover-grey:hover{color:#000;background-color:#9e9e9e}
 .light-grey,.hover-light-grey:hover{color:#000;background-color:#f1f1f1}
