--- a/didi.css
+++ b/didi.css
@@ -6,6 +6,7 @@
   position: relative;
   border-width: 0;
   border-style: none;
+  background-color: inherit;
   margin: 0;
   padding: 0;
   font-size: inherit;
