--- a/didi.css
+++ b/didi.css
@@ -362,6 +362,7 @@
 .pad-min.pad,.pad-min.pad-y,.pad-min.pad-top{padding-top:0.1em}
 .pad-min.pad,.pad-min.pad-y,.pad-min.pad-bottom{padding-bottom:0.1em}
 .pad-tiny.pad,.pad-tiny.pad-y,.pad-tiny.pad-top{padding-top:0.25em}
+.pad-tiny.pad,.pad-tiny.pad-y,.pad-tiny.pad-bottom{padding-bottom:0.25em}
 .pad-small.pad,.pad-small.pad-y,.pad-small.pad-top{padding-top:0.5em}
 .pad-small.pad,.pad-small.pad-y,.pad-small.pad-bottom{padding-bottom:0.5em}
 .pad-medium.pad,.pad-medium.pad-y,.pad-medium.pad-top{padding-top:1em}
