added no-backcolor css class to remove background color, i.e. use parent's

--- a/didi.css
+++ b/didi.css
@@ -664,3 +664,4 @@
 .no-float,.col.no-float{float:none}
 .float-right,.col.float-right{float:right}
 .no-repeat,.norepeat{background-repeat: no-repeat}
+.no-backcolor{background-color:inherit}
