--- a/didi.css
+++ b/didi.css
@@ -435,6 +435,7 @@
 .nowrap { white-space: nowrap}
 .truncate-word {  white-space: nowrap; overflow: hidden; text-overflow: ellipsis}
 .break-word{-ms-hyphens: auto;-moz-hyphens: auto;-webkit-hyphens: auto; hyphens: auto;word-wrap: break-word;overflow-wrap:break-word;text-overflow: ellipsis}
+.bullet-disc{ list-style-type: disc}
 
 /* vertical alignment */
 .vertical-bottom { vertical-align: bottom; }
