--- a/datatable.css
+++ b/datatable.css
@@ -36,7 +36,6 @@ table.data>tbody>tr>td
 table.data thead>tr>th
 {
   padding: 1px;
-  font-weight: 100;
 }
 
 table.data>tbody>tr>td
@@ -45,6 +44,7 @@ table.data>tbody>tr>td
   vertical-align: center;
   background-repeat:no-repeat;
   background-position: center;
+  white-space: normal;
 }
 
 table.data>tdata tr.actions,
@@ -52,7 +52,6 @@ table.data>thead .heading
 {
   float: left;
   display: inline-block;
-  font-size: 14pt;
   padding-top: 6px;
   padding-left: 4px;
   padding-right: 20px;
@@ -72,7 +71,6 @@ table.data .paging div
 {
   margin-left: 5px;
   margin-right: 5px;
-  font-size: 10pt;
 }
 
 table.data .paging input
@@ -143,7 +141,6 @@ table.data td.actions {
 table.data>tbody>tr.expanded>td
 {
   padding: 10px;
-  font-size: 9pt;
   width: 100%;
 }
 
@@ -154,11 +151,7 @@ table.data tr.expanded>td>*
 
 table.data tr [action]
 {
-  font-size: 10pt;
-  font-weight: 200;
   cursor: pointer;
-  padding: 0px 3px;
-  border-radius: 0;
   height: 100%;
 }
 
@@ -170,9 +163,6 @@ table.data tr [action]:hover
 table.data td.expandable [action]
 {
   height: 100%;
-  font-family: monospace;
-  font-size: 12pt;
-  font-weight: 100;
   border-right: 1px solid lightgray;
   display: inline-block;
   padding-left: 5px;
