--- a/datatable.css
+++ b/datatable.css
@@ -20,34 +20,26 @@ table.data>thead>tr>td
 }
 
 
-table.data>tbody>tr
-{
-  border-bottom: 1px solid #DFDFDF;
-  height: 24px;
-  vertical-align: top;
-}
-
-table.data>tbody>tr>td
-{
-  border-bottom: 1px solid #DFDFDF;
-  white-space: nowrap; overflow: hidden;  }
-}
-
-table.data thead>tr>th
+table.data>thead>tr>th
 {
   padding: 1px;
 }
 
 table.data>tbody>tr>td
 {
-  padding: 0px 4px;
   vertical-align: center;
   background-repeat:no-repeat;
   background-position: center;
   white-space: normal;
 }
 
-table.data>tdata tr.actions,
+
+table.data>tbody>tr>td.actions>.slide
+{
+  top: 0px;
+}
+
+
 table.data>thead .heading
 {
   float: left;
@@ -134,10 +126,6 @@ table.data tr.sort
   cursor: pointer;
 }
 
-table.data td.actions {
-  padding: 0px;
-}
-
 table.data>tbody>tr.expanded>td
 {
   padding: 10px;
@@ -170,20 +158,12 @@ table.data td.expandable [action]
   margin-right: 5px;
 }
 
-table.data tr [action=slide]
-{
-  float: right;
-  height: 100%;
-}
-
-
-table.data .slide
+table.data>tbody>tr>td.actions>[action=slide],
+table.data>tbody>tr>td.actions>.slide
 {
   position: absolute;
   float: right;
   right: 0px;
-  height: 100%;
-  cursor: pointer;
 }
 table.data .slide>[action]
 {
@@ -201,12 +181,6 @@ table.data td>input
   width: 100%;
   height: 100%;
 }
-
-table.data td>.actions>*
-{
-  height: 100%;
-}
-
 
 table.data tr.actions [action]
 {
