--- a/didi.css
+++ b/didi.css
@@ -439,6 +439,7 @@
 .uppercase { text-transform: uppercase; }
 .undecorated { text-decoration: none; }
 .nowrap { white-space: nowrap}
+.normal-wrap { white-space: normal}
 .truncate-word {  white-space: nowrap; overflow: hidden; text-overflow: ellipsis}
 .break-word{-ms-hyphens: auto;-moz-hyphens: auto;-webkit-hyphens: auto; hyphens: auto;word-wrap: break-word;overflow-wrap:break-word;text-overflow: ellipsis}
 .bullet-disc{ list-style-type: disc}
