--- a/didi.css
+++ b/didi.css
@@ -675,3 +675,7 @@
 .float-right,.col.float-right{float:right}
 .no-repeat,.norepeat{background-repeat: no-repeat}
 .no-backcolor{background-color:inherit}
+
+.scroll-table>thead,.scroll-table>tbody { float:left; width: 100% }
+.scroll-table>tbody { display: block; width: 100%;overflow-y: auto }
+.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%}
