--- a/didi.css
+++ b/didi.css
@@ -252,6 +252,8 @@
 
 /* list styles */
 .nolist { list-style: none }
+li.paragraph {text-indent: -1em }
+
 
 /* modal styles */
 .modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
