--- a/didi.css
+++ b/didi.css
@@ -386,29 +386,29 @@
 
 /* responsive widths */
 /* fractional width */
-.w-1-2 {width:49.99999%}
-.w-1-3 {width:33.33333%}
-.w-1-4 {width:24.99999%}
-.w-1-5 {width:19.99999%}
-.w-1-6 {width:16.66666%}
-.w-1-7 {width:14.28527%}
-.w-1-8 {width:12.49999%}
-.w-1-9 {width:11.11111%}
-.w-1-10 {width:9.99999%}
+.w-1-2,.half {width:49.99999%}
+.w-1-3,.third {width:33.33333%}
+.w-1-4,.quarter {width:24.99999%}
+.w-1-5,.fifth {width:19.99999%}
+.w-1-6,.sixth {width:16.66666%}
+.w-1-7,.seventh {width:14.28527%}
+.w-1-8,.eighth {width:12.49999%}
+.w-1-9,.nineth {width:11.11111%}
+.w-1-10,.tenth {width:9.99999%}
 .w-1-11 {width:9.09090%}
 .w-1-12 {width:8.33333%}
-.w-2-3 {width:66.66666%}
+.w-2-3,.two-thirds {width:66.66666%}
 .w-2-5 {width:39.99999%}
 .w-2-7 {width:28.57141%}
 .w-2-9 {width:22.22222%}
 .w-2-11 {width:18.18181%}
-.w-3-4 {width:74.99999%}
+.w-3-4,.three-quarter{width:74.99999%}
 .w-3-5 {width:59.99999%}
 .w-3-7 {width:41.85714%}
 .w-3-8 {width:37.49999%}
 .w-3-10 {width:29.99999%}
 .w-3-11 {width:27.27272%}
-.w-4-5 {width:79.99999%}
+.w-4-5,.four-fifth {width:79.99999%}
 .w-4-7 {width:47.14285%}
 .w-4-9 {width:44.44444%}
 .w-4-10 {width:39.99999%}
