--- a/didi.css
+++ b/didi.css
@@ -212,6 +212,8 @@
 .table-cell { display: table-cell}
 .table-fixed { table-layout: fixed}
 .table-row { display: table-row}
+.hide-overflow { overflow: hidden}
+.show-overflow { overflow: visible}
 
 /* dropdown */
 .hover-dropdown>.dropdown { display: none;}
