--- a/didi.css
+++ b/didi.css
@@ -253,6 +253,7 @@
 
 /* hover */
 .hover-shadow:hover{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
+.hover-underline:hover{text-decoration: underline}
 
 /* list styles */
 .nolist { list-style: none }
